# dt-utils

./: .gitignore  DCO  Makefile.am  NEWS  README  autogen.sh  check-news.sh  common.h  configure.ac  meson.build  meson_options.txt  of.c  of.h  version-gen  version.h.in
LICENSES/: GPL-2.0-only.txt  GPL-2.0-or-later.txt  GPL-3.0-or-later.txt  Zlib.txt
m4/: .gitignore
scripts/: barebox-mark-successful-boot.sh
src/: .gitignore  barebox-state.c  barebox-state.h  base64.c  base64.h  crc32.c  digest.h  dtblint-imx-pinmux.c  dtblint.c  dtblint.h  fdt.c  fdt.h  fdtdump.c  fs.h  keystore-blob.c  keystore.c  libbb.h  libdt-utils.sym  libdt.c  libdt.sym  module.h  of.h  printk.h  state.c  state.h
src/barebox-state/: backend.c  backend_bucket_circular.c  backend_bucket_direct.c  backend_format_dtb.c  backend_format_raw.c  backend_storage.c  state.c  state.h  state_variables.c
src/crypto/: digest.c  hmac.c  internal.h  keystore.h  sha.h  sha1.c  sha2.c
src/dt/: common.h  dt.h  fdt.h  list.h
src/linux/: err.h  list.h  uuid.h
src/linux/mtd/: mtd-abi.h
test/: 01-fixed-partition-no-gpt.dts  02-fixed-partition-before-gpt-partition.dts  03-fixed-partition-is-gpt-partition.dts  04-gpt-partition-by-partuuid.dts  05-gpt-partition-by-typeuuid.dts  06-fixed-partition-by-diskuuid.dts  07-raw-disk-fail.dts  08-gpt-disk-no-typeuuid-fail.dts  09-no-disk-fail.dts  31-fixed-partition-overlaps-two-gpt-partitions.dts  32-fixed-partition-overlaps-two-gpt-partitions-partially.dts  33-fixed-partition-part-of-gpt-partition.dts  barebox-state.dtsi  barebox-state.t  crc32.c  gpt-no-typeuuid.config  gpt.config  meson.build  raw.config  sharness.sh
